--- a/lab-00.Rmd
+++ b/lab-00.Rmd
@@ -43,19 +43,19 @@ p1
 ```
 
 
-*Remove this text (including the stars), and add your answer for Exercise 18 here.*
+Our usernames, and our favourtie numbers and colours in a bar chart
 
 ### Exercises 19
 
 Change the text of the plot title and axis labels.
 
 ```{r labelled-bar-plot}
-p1 + labs(x = "Insert text here", 
-          y = "Insert text here",
-          title = "Insert text here")
+p1 + labs(x = "username", 
+          y = "favourtite number",
+          title = "Group Info.")
 ```
 
-*Remove this text (including the stars), and add your answer for Exercise 19 here.*
+Modify axis, legend, and plot labels
 
 ### Exercise 20
 
@@ -65,4 +65,4 @@ p2 <- ggplot(team_data, aes(x = hobby)) +
 p2
 ```
 
-*Remove this text (including the stars) and add your answer for Exercise 20 here.*
+spreadsheet, catagorise hobbies into generalized groups, pie charts
